# wit-bindgen

./: Cargo.toml
.github/workflows/: main.yml
crates/bindgen-core/: Cargo.toml
crates/bindgen-core/src/: lib.rs
crates/gen-guest-c/: Cargo.toml
crates/gen-guest-rust/: Cargo.toml
crates/gen-guest-rust/src/: lib.rs
crates/gen-host-js/: Cargo.toml
crates/gen-host-wasmer-py/: Cargo.toml
crates/gen-host-wasmer-py/src/: dependencies.rs  lib.rs  source.rs
crates/gen-host-wasmer-py/tests/: runtime.rs
crates/gen-host-wasmer-rust/: Cargo.toml
crates/gen-host-wasmer-rust/src/: lib.rs
crates/gen-host-wasmer-rust/tests/: codegen.rs
crates/gen-host-wasmtime-py/: Cargo.toml
crates/gen-host-wasmtime-py/src/: lib.rs
crates/gen-host-wasmtime-rust/: Cargo.toml
crates/gen-host-wasmtime-rust/src/: lib.rs
crates/gen-markdown/: Cargo.toml
crates/gen-rust-lib/: Cargo.toml
crates/gen-rust-lib/src/: lib.rs
crates/gen-wasmer/: Cargo.toml
crates/gen-wasmer-py/: Cargo.toml
crates/gen-wasmer-py/src/: lib.rs
crates/gen-wasmer/src/: lib.rs
crates/gen-wasmtime-py/src/: lib.rs
crates/guest-rust/: Cargo.toml
crates/guest-rust-macro/: Cargo.toml
crates/guest-rust-macro/src/: lib.rs
crates/host-wasmer-rust/: Cargo.toml
crates/host-wasmer-rust-macro/: Cargo.toml
crates/host-wasmer-rust-macro/src/: lib.rs
crates/host-wasmer-rust/src/: lib.rs
crates/host-wasmtime-rust/: Cargo.toml
crates/host-wasmtime-rust-macro/: Cargo.toml
crates/host-wasmtime-rust/src/: lib.rs  region.rs
crates/test-helpers/: Cargo.toml
crates/test-helpers/src/: lib.rs
crates/test-rust-wasm/: Cargo.toml
crates/wasmer/: Cargo.toml
crates/wasmer-impl/: Cargo.toml
crates/wit-bindgen-demo/: Cargo.toml  demo.wit  index.html  main.ts
crates/wit-bindgen-demo/src/: lib.rs
crates/wit-component/: Cargo.toml
crates/wit-parser/: Cargo.toml
tests/runtime/flavorful/: host-wasmer.py  host-wasmer.rs
tests/runtime/handles/: host-wasmer.rs
tests/runtime/invalid/: host-wasmer.rs
tests/runtime/lists/: host-wasmer.py  host-wasmer.rs
tests/runtime/many_arguments/: host-wasmer.rs
tests/runtime/numbers/: host-wasmer.rs
tests/runtime/records/: host-wasmer.rs
tests/runtime/smoke/: host-wasmer.rs
tests/runtime/variants/: host-wasmer.py  host-wasmer.rs
