[package]
name = "linera-wit-bindgen-gen-guest-rust"
version = "0.2.0"
description = "experimental fork"
license = "Apache-2.0"
authors = ["Alex Crichton <alex@alexcrichton.com>", "Linera <contact@linera.io>"]
edition = "2021"

[lib]
test = false
doctest = false

[dependencies]
wit-bindgen-core = { path = '../bindgen-core', version = '0.2.0', package = "linera-wit-bindgen-core" }
wit-bindgen-gen-rust-lib = { path = '../gen-rust-lib', version = '0.2.0', package = "linera-wit-bindgen-gen-rust-lib" }
heck = "0.3"
structopt = { version = "0.3", default-features = false, optional = true }

[dev-dependencies]
wit-bindgen-guest-rust = { path = '../guest-rust', package = "linera-wit-bindgen-guest-rust" }
test-helpers = { path = '../test-helpers', features = ['guest-rust'], package = "linera-test-helpers" }
