[package]
name = "linera-wit-bindgen-gen-host-wasmer-py"
version = "0.2.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"

[lib]
doctest = false
test = false

[dependencies]
wit-bindgen-core = { path = '../bindgen-core', version = '0.2.0', package = "linera-wit-bindgen-core" }
heck = "0.3"
structopt = { version = "0.3", default-features = false, optional = true }

[dev-dependencies]
test-helpers = { path = '../test-helpers', features = ['host-wasmer-py'], package = "linera-test-helpers" }
