[package]
name = "linera-wit-bindgen-gen-host-wasmer-rust"
version = "0.2.0"
description = "experimental fork"
license = "Apache-2.0"
authors = ["Alex Crichton <alex@alexcrichton.com>", "Linera <contact@linera.io>"]
edition = "2021"

[lib]
test = false
doctest = false

[dependencies]
wit-bindgen-core = { path = '../bindgen-core', version = '0.2.0', package = "linera-wit-bindgen-core" }
wit-bindgen-gen-rust-lib = { path = '../gen-rust-lib', version = '0.2.0', package = "linera-wit-bindgen-gen-rust-lib" }
heck = "0.3"
structopt = { version = "0.3", default-features = false, optional = true }

[dev-dependencies]
anyhow = "1.0"
test-helpers = { path = '../test-helpers', features = ['host-wasmer-rust'], package = "linera-test-helpers" }
wasmer = "3.0.0-rc.2"
wasmer-wasi = "3.0.0-rc.2"
wit-bindgen-host-wasmer-rust = { path = '../host-wasmer-rust', features = ['tracing'], package = "linera-wit-bindgen-host-wasmer-rust" }
