[package]
name = "linera-wit-bindgen-gen-rust-lib"
version = "0.2.0"
description = "experimental fork"
license = "Apache-2.0"
authors = ["Alex Crichton <alex@alexcrichton.com>", "Linera <contact@linera.io>"]
edition = "2021"

[lib]
doctest = false
test = false

[dependencies]
wit-bindgen-core = { path = '../bindgen-core', version = "0.2", package = "linera-wit-bindgen-core" }
heck = "0.3"
