[package]
name = "linera-wit-bindgen-guest-rust"
version = "0.2.0"
description = "experimental fork"
license = "Apache-2.0"
authors = ["Alex Crichton <alex@alexcrichton.com>", "Linera <contact@linera.io>"]
edition = "2021"

[dependencies]
wit-bindgen-guest-rust-macro = { path = "../guest-rust-macro", version = "0.2.0", optional = true, package = "linera-wit-bindgen-guest-rust-macro" }
bitflags = "1.3"

[features]
default = ["macros"]
macros = ["wit-bindgen-guest-rust-macro"]
