[package]
name = "wit-bindgen-host-wasmer-rust-macro"
version = "0.2.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"

[lib]
proc-macro = true
doctest = false
test = false

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
wit-bindgen-core = { path = "../bindgen-core", version = "0.2.0" }
wit-bindgen-gen-host-wasmer-rust = { path = "../gen-host-wasmer-rust", version = "0.2.0" }

[features]
tracing = []
async = []
