[package]
name = "linera-wit-bindgen-host-wasmer-rust-macro"
version = "0.2.0"
description = "experimental fork"
license = "Apache-2.0"
authors = ["Alex Crichton <alex@alexcrichton.com>", "Linera <contact@linera.io>"]
edition = "2021"

[lib]
proc-macro = true
doctest = false
test = false

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
wit-bindgen-core = { path = "../bindgen-core", version = "0.2", package = "linera-wit-bindgen-core" }
wit-bindgen-gen-host-wasmer-rust = { path = "../gen-host-wasmer-rust", version = "0.2", package = "linera-wit-bindgen-gen-host-wasmer-rust" }

[features]
tracing = []
async = []
