[package]
name = "linera-wit-bindgen-host-wasmer-rust"
version = "0.2.0"
description = "experimental fork"
license = "Apache-2.0"
authors = ["Alex Crichton <alex@alexcrichton.com>", "Linera <contact@linera.io>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
bitflags = "1.2"
once_cell = "1.13"
thiserror = "1.0"
wit-bindgen-host-wasmer-rust-macro = { path = "../host-wasmer-rust-macro", version = "0.2.0", package = "linera-wit-bindgen-host-wasmer-rust-macro" }
tracing-lib = { version = "0.1.26", optional = true, package = 'tracing' }
async-trait = { version = "0.1.50", optional = true }
wasmer = "3.0.0-rc.2"

[features]
# Enables generated code to emit events via the `tracing` crate whenever wasm is
# entered and when native functions are called. Note that tracin is currently
# only done for imported functions.
tracing = ['tracing-lib', 'wit-bindgen-host-wasmer-rust-macro/tracing']

# Enables async support for generated code, although when enabled this still
# needs to be configured through the macro invocation.
async = ['async-trait', 'wit-bindgen-host-wasmer-rust-macro/async']
