[package]
name = "linera-wit-bindgen-demo"
version = "0.2.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2021"
publish = false

[lib]
crate-type = ['cdylib']
test = false
doctest = false

[dependencies]
wit-bindgen-core = { path = '../bindgen-core', package = "linera-wit-bindgen-core" }
wit-bindgen-gen-guest-rust = { path = '../gen-guest-rust', package = "linera-wit-bindgen-gen-guest-rust" }
wit-bindgen-gen-host-wasmtime-rust = { path = '../gen-host-wasmtime-rust', package = "linera-wit-bindgen-gen-host-wasmtime-rust" }
wit-bindgen-gen-host-wasmtime-py = { path = '../gen-host-wasmtime-py', package = "linera-wit-bindgen-gen-host-wasmtime-py" }
wit-bindgen-gen-host-js = { path = '../gen-host-js', package = "linera-wit-bindgen-gen-host-js" }
wit-bindgen-gen-guest-c = { path = '../gen-guest-c', package = "linera-wit-bindgen-gen-guest-c" }
wit-bindgen-gen-markdown = { path = '../gen-markdown', package = "linera-wit-bindgen-gen-markdown" }
wit-bindgen-gen-host-wasmer-rust = { path = '../gen-host-wasmer-rust', package = "linera-wit-bindgen-gen-host-wasmer-rust" }
wit-bindgen-gen-host-wasmer-py = { path = '../gen-host-wasmer-py', package = "linera-wit-bindgen-gen-host-wasmer-py" }
wit-bindgen-guest-rust = { path = '../guest-rust', package = "linera-wit-bindgen-guest-rust" }
wasmprinter = "0.2.29"
